--- a/learn/code-examples/token/token.mdx
+++ b/learn/code-examples/token/token.mdx
@@ -489,7 +489,17 @@ const transferFromBatch = () => {
     .catch((error) => console.error(error));
 };
 
-// transfer different amounts FROM different addresses  
-// TO different addresses with one call  
-transferFromBatch();
+mintBatchTokensTo();
 ```
+
+<MdxNavigation>
+  <MdxNavigationItem
+    href="/portal/learn/code-examples/bundle-drop"
+    title="Bundle Drop"
+  />
+  <MdxNavigationItem
+    href="/portal/learn/code-examples/marketplace"
+    title="Marketplace"
+    next
+  />
+</MdxNavigation>
