--- a/learn/code-examples/token/token.mdx
+++ b/learn/code-examples/token/token.mdx
@@ -203,7 +203,7 @@ const token = sdk.getTokenModule(tokenAddress);
 
 const getDelegationOf = async (account: string) => {  
   try {
-    await token.getDelegationOf(account)
+    await token.getDelegationOf(account);
   } catch (error) {
     console.log('Failed to get delegation of. Error: ', error);
   }
